websocket/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: websocket
    app.kubernetes.io/name: websocket
  name: websocket
  namespace: websocket
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: websocket
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: websocket
        app.kubernetes.io/name: websocket
    spec:
      containers:
      - image: docker.io/kyungsu77777/websocket:0.0.2
        imagePullPolicy: Always
        name: websocket
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: websocket-cm
